--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi>=0.103.0
-uvicorn>=0.22.0
+uvicorn[standard]>=0.22.0
 httpx>=0.24.1
 pydantic>=2.3.0
-playwright>=1.40.0
 beautifulsoup4>=4.12.0
+playwright>=1.40.0
