--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - "8000"
     networks:
       - tubify-net
+    build:
+     context: .
+     dockerfile: Dockerfile
     environment:
       - OPENWEATHER_API_KEY=${OPENWEATHER_API_KEY}
       - DB_HOST=${DB_HOST}
